# apolo-test-automation

./: .env  .gitignore  .pre-commit-config.yaml  .testmondata  README.md  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: blank.yml  ci.yaml  cleanup_pr_report_pages.yaml  master_run.yaml  pr_run.yaml  (+3 more)
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
run-100/: index.html
run-101/: index.html
run-102/: index.html
run-103/: index.html
run-104/: index.html
run-2025-06-18-10/: index.html
run-2025-06-18-11/: index.html
run-2025-06-18-6/: index.html
run-2025-06-18-7/: index.html
run-2025-06-18-8/: index.html
run-2025-06-18-83/: index.html
run-2025-06-18-84/: index.html
run-2025-06-18-9/: index.html
run-2025-06-19-11/: index.html
run-2025-06-19-12/: index.html
run-2025-06-19-98/: index.html
run-2025-06-19-99/: index.html
run-2025-06-20-99/: index.html
run-2025-06-23-105/: index.html
run-2025-06-23-106/: index.html
run-2025-06-23-107/: index.html
run-2025-06-23-108/: index.html
run-2025-06-23-111/: index.html
run-2025-06-23-112/: index.html
run-2025-06-23-113/: index.html
run-2025-06-23-114/: index.html
run-2025-06-23-115/: index.html
run-2025-06-24-120/: index.html
run-2025-06-24-121/: index.html
run-2025-06-24-122/: index.html
run-2025-06-24-123/: index.html
run-2025-06-24-124/: index.html
run-2025-06-24-125/: index.html
run-2025-06-24-126/: index.html
run-2025-06-24-127/: index.html
run-2025-06-24-128/: index.html
run-2025-06-26-131/: index.html
run-2025-06-26-133/: index.html
run-2025-06-27-134/: index.html
run-2025-06-27-137/: index.html
run-2025-06-27-138/: index.html
run-2025-07-04-147/: index.html
run-2025-07-04-149/: index.html
run-2025-07-04-150/: index.html
run-2025-07-04-151/: index.html
run-2025-07-04-152/: index.html
run-2025-07-04-154/: index.html
run-2025-07-04-155/: index.html
run-2025-07-05-157/: index.html
run-2025-07-16-53/: index.html
run-2025-07-16-54/: index.html
run-2025-07-17-61/: index.html
run-2025-07-23-73/: index.html
run-2025-07-23-74/: index.html
run-2025-07-24-76/: index.html
run-2025-07-25-79/: index.html
run-2025-07-26-80/: index.html
run-2025-07-26-81/: index.html
run-2025-07-26-82/: index.html
run-2025-07-26-83/: index.html
run-2025-07-26-84/: index.html
run-2025-07-26-85/: index.html
run-2025-07-26-86/: index.html
run-2025-07-26-87/: index.html
run-2025-07-26-88/: index.html
run-2025-07-26-89/: index.html
run-2025-07-26-90/: index.html
run-2025-07-26-91/: index.html
run-2025-07-26-92/: index.html
run-2025-07-26-93/: index.html
run-2025-07-27-94/: index.html
run-2025-07-27-95/: index.html
run-2025-09-04-145/: index.html
run-2025-09-05-150/: index.html
run-2025-09-06-152/: index.html
run-2025-09-07-153/: index.html
run-2025-09-07-154/: index.html
run-2025-09-07-155/: index.html
run-2025-09-07-156/: index.html
run-2025-09-07-157/: index.html
run-2025-09-07-158/: index.html
run-2025-09-07-159/: index.html
run-2025-09-07-160/: index.html
run-2025-09-09-163/: index.html
run-2025-09-09-164/: index.html
run-2025-09-14-168/: index.html
run-2025-09-14-169/: index.html
run-2025-09-14-170/: index.html
run-2025-09-23-177/: index.html
run-2025-09-25-178/: index.html
run-2025-09-29-181/: index.html
run-2025-10-02-182/: index.html
run-2025-10-09-189/: index.html
run-2025-10-10-192/: index.html
run-2025-10-15-195/: index.html
run-2025-10-23-199/: index.html
run-2026-01-15-260/: index.html
run-2026-01-16-262/: index.html
run-2026-01-19-263/: index.html
run-69/: index.html
run-70/: index.html
run-71/: index.html
run-74/: index.html
run-75/: index.html
run-76/: index.html
run-77/: index.html
run-80/: index.html
run-81/: index.html
run-82/: index.html
run-97/: index.html
run-test-latest/: index.html
tests/: conftest.py  test_data.yaml
widgets/: duration-trend.json  duration.json  history-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+1094287 files in other folders)
