[project]
name = "apolo-test-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.12.14",
    "allure-pytest==2.15.0",
    "jsonschema==4.25.0",
    "omegaconf==2.3.0",
    "playwright==1.54.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-playwright==0.7.0",
    "pyyaml==6.0.2",
    "mypy==1.17.0",
    "pre-commit==4.2.0",
    "types-jsonschema==4.25.0.20250720",
    "types-aiofiles==24.1.0.20250708",
    "types-pyyaml==6.0.12.20250516",
    "apolo-all==25.7.1",
    "pytest-rerunfailures>=15.1",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.1.3",
    "pytest-timeout>=2.4.0",
]

[tool.mypy]
strict = true
pretty = true
packages = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--headed -vv --reruns 2 --reruns-delay 10"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: quick validation tests",
    "regression: full test suite"
]
