[project]
name = "apolo-test-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.1",
    "allure-pytest==2.15.0",
    "jsonschema==4.25.1",
    "omegaconf==2.3.0",
    "playwright==1.55.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-playwright==0.7.1",
    "pyyaml==6.0.3",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
    "types-jsonschema==4.25.1.20251009",
    "types-aiofiles==25.1.0.20251011",
    "types-pyyaml==6.0.12.20250915",
    "apolo-all==25.9.1",
    "pytest-rerunfailures>=15.1",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.1.3",
    "pytest-timeout>=2.4.0",
    "lorem>=0.1.1",
    "markdown>=3.8.2",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0",
    "bs4>=0.0.2",
    "pytest-progress>=1.3.0",
    "pytest-sugar>=1.1.1",
]

[tool.mypy]
strict = true
pretty = true
packages = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--headed -vv --reruns 1 --reruns-delay 10 --order-scope=class"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%H:%M:%S"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: quick validation tests",
    "regression: full test suite"
]
